--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "myaza-frontend-test-franklin-mike",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
-  }
+	"name": "myaza-frontend-test-franklin-mike",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev ",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"autoprefixer": "^10.4.21",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.5.0",
+		"nanoid": "^5.1.5",
+		"next": "15.2.3",
+		"postcss": "^8.5.3",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"react-spinners": "^0.15.0",
+		"tailwind-merge": "^3.0.2"
+	},
+	"devDependencies": {
+		"@svgr/cli": "^8.1.0",
+		"@svgr/webpack": "^8.1.0",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"tailwindcss": "^4.0.14",
+		"typescript": "^5"
+	}
 }
