--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
 	},
 	"dependencies": {
 		"autoprefixer": "^10.4.21",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.5.0",
+		"lucide-react": "^0.483.0",
 		"nanoid": "^5.1.5",
-		"next": "15.2.3",
+		"next": "^15.2.3",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-spinners": "^0.15.0",
-		"tailwind-merge": "^3.0.2"
+		"recharts": "^2.15.1",
+		"tailwind-merge": "^3.0.2",
+		"tw-animate-css": "^1.2.4"
 	},
 	"devDependencies": {
 		"@svgr/cli": "^8.1.0",
@@ -28,6 +32,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/recharts": "^1.8.29",
 		"tailwindcss": "^4.0.14",
 		"typescript": "^5"
 	}
